# PySCIPOpt

./: pyproject.toml
.github/workflows/: cibuildwheel.yml  integration-test.yml  test-release.yml  update-packages-and-documentation.yml
