[build-system]
requires = ['setuptools', 'cython <3, >=0.21']
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-all = [
  "(apt-get update && apt-get install -y git) || yum install -y git || brew install git",
  "git clone --recursive https://github.com/scipopt/ScipBaseSuite.git scipopt",
  "cd scipopt",
  "mkdir build",
  "cd build",
  "cmake .. -DCMAKE_INSTALL_PREFIX=/project/scipopt/build",
  "pwd",
  "ls",
  "make -j",
]
environment = {LD_LIBRARY_PATH="/project/scipopt/build/lib:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scipopt/build"}
build-frontend = "build"


[tool.cibuildwheel.macos]
before-all = [
  "brew install git",
  "git clone --recursive https://github.com/scipopt/ScipBaseSuite.git scipopt",
  "cd scipopt",
  "mkdir build",
  "cd build",
  "cmake .. -DCMAKE_INSTALL_PREFIX=/project/scipopt/build",
  "make -j",
]
environment = {LD_LIBRARY_PATH="/project/scipopt/build/lib:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scipopt/build"}
build-frontend = "build"