[build-system]
requires = ['setuptools', 'cython <3, >=0.21']
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-all = [
"(apt-get update && apt-get install -y cmake g++ git clang) || yum install -y cmake g++ git clang",
"git clone https://github.com/scipopt/scip.git",
"cd scip",
"git checkout v80-bugfix",

"git clone https://github.com/scipopt/soplex.git",
"cd soplex",
"git checkout bugfix-60",
"mkdir build",
"cd build",
"cmake ..",
"make -j",
"cd ../..",

"mkdir build",
"cd build",
"cmake .. -DAUTOBUILD=ON -DSOPLEX_DIR=soplex/build -DCMAKE_INSTALL_PREFIX=../install",
"make -j",
"make install",
]
environment = {LD_LIBRARY_PATH="/project/scip/install/lib:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scip/install/"}
build-frontend = "build"


# [tool.cibuildwheel.macos]
# before-all = [
#   "brew install git",
#   "git clone --recursive https://github.com/scipopt/ScipBaseSuite.git scipopt",
#   "cd scipopt",
#   "mkdir build",
#   "cd build",
#   "cmake .. -DCMAKE_INSTALL_PREFIX=/project/scipopt/build",
#   "make -j",
#   "make install INSTALLDIR=/project/scipopt/install",
# ]
# environment = {LD_LIBRARY_PATH="/project/scipopt/build/scip/lib:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scipopt/build/scip"}
# build-frontend = "build"