[build-system]
requires = ['setuptools', 'cython <3, >=0.21']
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-all = [
"(apt-get update && apt-get install -y cmake git g++ clang) || yum install -y git clang gcc-c++",
"git clone https://github.com/scipopt/scip.git",
"cd scip",
"git checkout v80-bugfix",

"git clone https://github.com/scipopt/soplex.git",
"cd soplex",
"git checkout bugfix-60",
"mkdir build",
"cd build",
"cmake ..",
"make -j",
"cd ../..",

"mkdir build",
"cd build",
"cmake .. -DAUTOBUILD=ON -DSOPLEX_DIR=soplex/build -DCMAKE_INSTALL_PREFIX=../install",
"make -j",
"make install",
"cp -r /project/scip/install/lib64 /project/scip/install/lib",
]
environment = {PATH="/project/scip/install/bin:$PATH", LD_LIBRARY_PATH="/project/scip/install/lib/:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scip/install/"}
build-frontend = "build"
skip = "*-musllinux*"

[tool.cibuildwheel.macos]
before-all = [
"brew install git cmake",
"git clone https://github.com/scipopt/scip.git",
"cd scip",
"git checkout v80-bugfix",

"git clone https://github.com/scipopt/soplex.git",
"cd soplex",
"git checkout bugfix-60",
"mkdir build",
"cd build",
"cmake ..",
"make -j",
"cd ../..",

"mkdir build",
"cd build",
"cmake .. -DAUTOBUILD=ON -DSOPLEX_DIR=soplex/build -DCMAKE_INSTALL_PREFIX=../install",
"make -j",
"make install",
# "cp -r /project/scip/install/lib64 /project/scip/install/lib",
]
environment = {PATH="/project/scip/install/bin:$PATH", LD_LIBRARY_PATH="/project/scip/install/lib/:$LD_LIBRARY_PATH", SCIPOPTDIR="/project/scip/install/"}
build-frontend = "build"